kustomize/base/bookinfo/bookinfo-vs.yaml
apiVersion: networking.istio.io/v1 
kind: VirtualService 
metadata: 
  name: bookinfo 
spec: 
  hosts: 
  - "bookinfo.hanxux.local" 
  gateways: 
  - bookinfo-gateway 
  http: 
  - match: 
    - uri: 
        exact: /productpage 
    - uri: 
        prefix: /static 
    - uri: 
        exact: /login 
    - uri: 
        exact: /logout
    - uri: 
        prefix: /api/v1/products 
    route: 
    - destination: 
        host: productpage.bookinfo.svc.cluster.local 
        port: 
          number: 9080
